<resources>
    <string name="app_name">Loling</string>
    <string name="birth_date">Birthday</string>
    <string name="btn_login">Sign in</string>
    <string name="btn_go_singup">Sign up</string>
    <string name="btn_singup">Sign up</string>
    <string name="id">ID</string>
    <string name="main_loling_msg">Let\'s draw\nloling paper to friend!</string>
    <string name="mypage_setting_close">Manage account</string>
    <string name="mypage_setting_ctrl">Manage account</string>
    <string name="mypage_setting_noti">Notification</string>
    <string name="password">Password</string>
    <string name="password_check">Confirm password</string>
    <string name="pw">PW</string>

    <string name="signup_personal_msg">Please enter\nname and birthday</string>
    <string name="signup_entry_msg">Please enter\nID and password</string>
    <string name="signup_photo_msg">Please register \nprofile picture.</string>
    <string name="friend">Friend</string>
    <string name="friendList">Friends list</string>
    <string name="phone_num">Contacts</string>
    <string name="phone_number">Mobile number</string>
    <string name="writtenLoling">Written loling</string>
    <string name="receiveLiling">Received loling</string>

    <string name="btn_okay">Okay</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_cancel">Cancel</string>

    <string name="create_room_ps_type_the_anniversary_date">Please set the date for %s.</string>
    <string name="create_room_paper_will_be_sent_at_the_midnight">Paper will be sent at the midnight.</string>
    <string name="create_room_btn_create_loling">Create Loling</string>
    <string name="create_room_click_here_to_select_date">Click here to select date</string>
    <string name="create_room_room_already_existed_for_psname_at_psdate">Loling is already existed for %1$s at %2$s.\nWould you create new Loling or join to existed Loling?</string>
    <string name="create_room_create_new">Create new</string>
    <string name="create_room_join_existed">Join</string>
    <string name="any_day">Date of anniversary</string>
    <string name="author_loling_room_count_participant">" entered"</string>
    <string name="chong">Total</string>
    <string name="author_List_Loling">\'s loling paper</string>
    <string name="write_completion">Done</string>
    <string name="channel_name">yu</string>
    <string name="channel_description">channel_description</string>

    <string name="draw_activity_msg_do_you_really_wanna_go_back_and_discard">Do you really want to go back and discard changes?</string>
    <string name="draw_activity_msg_do_you_want_to_delete_selected_component">Do you want to delete this item?</string>
    <string name="draw_activity_msg_do_you_want_to_submit_your_paper">Do you want to submit your loling paper?\nYou cannot edit this paper after submit.</string>
    <string name="loling_room_count_participant">Participants</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="main_birth_friends_msg">These friends\' birthday is comming!</string>


</resources>
