<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/tvAlreadyExisted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/create_room_title_text_margin"
        android:layout_marginEnd="@dimen/create_room_title_text_margin"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/black0"
        android:text="@string/create_room_room_already_existed_for_psname_at_psdate"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="78dp">

        <!-- Create new -->
        <LinearLayout
            android:id="@+id/btnCreateNewLoling"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/img_newroom"
                android:layout_marginBottom="16dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/black1"
                android:layout_marginBottom="16dp"
                android:text="@string/create_room_create_new"/>
        </LinearLayout>

        <!-- Join existed -->
        <LinearLayout
            android:id="@+id/btnJoinExistedLoling"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/img_inroom"
                android:layout_marginBottom="16dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/black1"
                android:layout_marginBottom="16dp"
                android:text="@string/create_room_join_existed"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>