<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white0"
        android:padding="@dimen/LoginActivityPadding"
        tools:context=".user.view.LoginActivityDataBinding">

        <ImageView
            android:id="@+id/ivLoginLogo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/LoginActivityLogoSize"
            android:layout_marginTop="160dp"
            android:src="@drawable/logo_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etLoginIDSurface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:text="@string/id"
            android:theme="@style/TextLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLoginLogo">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etLoginID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etLoginPWSurface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:text="@string/pw"
            android:theme="@style/TextLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etLoginIDSurface">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etLoginPW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pw"
                android:inputType="textPassword"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="72dp"
            android:background="@drawable/circle_round10"
            android:backgroundTint="@color/peachy_pink"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:lineSpacingExtra="1sp"
            android:text="@string/btn_login"
            android:textColor="@color/white0"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etLoginPWSurface" />

        <TextView
            android:id="@+id/btnLoginSignup"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/circle_round10_2"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:lineSpacingExtra="1sp"
            android:text="@string/btn_go_singup"
            android:textColor="@color/peachy_pink"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
    </android.support.constraint.ConstraintLayout>
</layout>